umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_moe_query.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 24
bond_count: 26
sum_formula: C17N5O2
graph6: W??CM@oG??_@?@??aAG?A??C?C???G??CG?@A?@?A????A?
