umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_oechem_28467647.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 29
bond_count: 31
sum_formula: C27P2
graph6: "\\hCGGc@?G@?@?@??_?G?@?@C??G?O???C??@???G???_??P???@G???????G???A????O"
