umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_oechem_Ceftazidime.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 59
bond_count: 62
sum_formula: C22H22N6O7S2
graph6: "z????????????_????C?_?AC_OG?_???E??@?@?Oo?C?`????_@?@????_???A?C????O????_????WC???@????O?????O????A?K???GO?W?????C?????@??????@??????G????G????????_??????_??????@???????G???????O???????_???????_???????G???????A????????_???????C????????G????????O????????O?????_????????G???????A?????????"
